<resources>
    <string name="app_name">Need+</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_phone_number">Enter your phone number</string>
    <string name="submit">SUBMIT</string>
    <string name="transporter">Transporter</string>
    <string name="select_user_type">Select User Type</string>
    <string name="driver">Driver</string>
    <string name="customer">Customer</string>
    <string name="personal_details">Personal Details</string>
    <string name="first_name">First name</string>
    <string name="transporter_name">Transporter Name</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation dr required</string>
    <string name="pan_number">Pan number</string>
    <string name="email">Email</string>
    <string name="last_name">Last name</string>
    <string name="address_details">Address Details</string>
    <string name="address_line1">Please enter valid address</string>
    <string name="address_line2">Address line 2</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="select_town">Select Town</string>
    <string name="select_state">Select State</string>
    <string name="state">State</string>

    <string name="continue_text">Continue</string>

    <string name="please_wait">Please wait...</string>
    <string name="alert">Alert</string>
    <string name="ok">OK</string>
    <string name="confirm_add">Confirm add</string>
    <string name="first_name_required">First name required</string>
    <string name="first_name_should_be_more_then_3_character">First name should be more then 3 characters</string>
    <string name="name_could_not_starts_with_dot">Name could not start with dot</string>
    <string name="last_name_required">Last name required</string>
    <string name="last_name_should_be_more_then_3_character">Last name should be more then 3 charaters</string>
    <string name="email_is_required">Email is required</string>
    <string name="please_enter_valid_email">Please enter valid email</string>
    <string name="transporter_required">Transporter name required</string>
    <string name="pan_number_required">Pan number</string>
    <string name="address_line_one">Please enter valid address</string>
    <string name="load_type">Load Type</string>
    <string name="full_truck_load">Full truck Load</string>
    <string name="part_truck_load">Part Truck Load</string>
    <string name="scheduling_type">Scheduling Type</string>
    <string name="one_time">One Time</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="weight">Weight (Metric Tons)</string>
    <string name="select_weight">Select Weight</string>
    <string name="Materialtype">Material Type</string>
    <string name="please_enter_valid_pincode">Please enter valid pincode</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="my_part_load">My Part Loads</string>
    <string name="gps_suvidha">GPS Suvidha</string>
    <string name="toll_calculator">Toll Calculator</string>
    <string name="search_truck">Search Truck</string>
    <string name="profile">Profile</string>
    <string name="kyc_document">KYC Documents</string>
    <string name="alternate_mobile_no">Alternate Mobile No</string>
    <string name="my_loads">My Loads</string>
    <string name="my_part_loads">My Part Loads</string>
    <string name="about_us">About Us</string>
    <string name="policy_info">Policy Info</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="truck_type">Truck Type</string>
    <string name="date_of_load">Date Of Load</string>
    <string name="no_of_trucks">No Of Trucks</string>
    <string name="vehicle_no">Vehicle No.</string>
    <string name="driverName">Driver Name</string>
    <string name="mobileNumber">Mobile</string>
    <string name="date_of_post">Post Date</string>
    <string name="source_pincode">Source Pincode</string>
    <string name="destination_pincode">Destination Pincode</string>
    <string name="required_field">Required field</string>
    <string name="enter_valid_phone_number">Please enter valid mobile number</string>
    <string name="select">Select</string>
    <string name="from">From</string>
    <string name="call_now">CALL NOW</string>
    <string name="get_best_fright">GET BEST FRIGHT</string>
    <string name="date">Date</string>
    <string name="to">To</string>
    <string name="post_a_load">Post A Load</string>
    <string name="search_load">Search Load</string>
    <string name="post_truck">Post A Truck</string>
    <string name="my_trucks">My Trucks</string>
    <string name="no_pincode_found">Please enter valid pincode</string>
    <string name="connect_to_internet">Please connect to internet</string>
    <string name="total_truck">Total Trcuks</string>
    <string name="or">OR</string>
    <string name="offline">Offline Register</string>
    <string name="enter_otp">Enter your OTP</string>
    <string name="pancard">Pancard of Firm/Account Holder*</string>
    <string name="passport_photo">Passport Size Photo</string>
    <string name="visiting_card">Visiting Card</string>
    <string name="aadhar_number">Aadhaar Number</string>
    <string name="noFileChoosen">No file chosen</string>
    <string name="file_uploaded_succesfully">File Uploaded Succesfully</string>
    <string name="please_select_file">Please select file first</string>
    <string name="total_Load">Total Loads</string>
    <string name="area">Area</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="telegu">Telegu</string>
    <string name="tamil">Tamil</string>
    <string name="gujrati">Gujrati</string>
    <string name="punjabi">Punjabi</string>
    <string name="please_choose_langunge">Choose Language</string>
    <string name="title_activity_search_address">ActivitySearchAddress</string>
    <string name="autocomplete_hint">Enter place to serach</string>
    <string name="select_truck">Select Truck</string>
    <string name="select_material_type">Select Material Type</string>
    <string name="enter_material_name">Enter material name</string>
    <string name="enter_price">Enter Price</string>

    <string name="material_name">Material Name</string>
    <string name="select_truck_type">Select Truck Type</string>
    <string name="rate">Rate</string>
    <string name="perMt">Per MT</string>
    <string name="fixed_rate">Fixed Rate</string>
    <string name="fright_type">Frieght Type</string>
    <string name="destination_city">Destination City</string>
    <string name="source_city">Source City</string>
    <string name="something_went_wrong">Something Went Worng.</string>
    <string name="name">Name</string>
    <string name="town">Town</string>
    <string name="please_connect_to_the_internet">Please connect to the internet</string>
    <string name="supplier">Supplier</string>
    <string name="truck_owner">Truck Owner</string>
    <string name="license_number">License Number</string>
    <string name="license_number_required">License Number Required</string>
    <string name="add_truck">Add Truck</string>
    <string name="RegistrationNumber">Registration Number</string>
    <string name="RegistrationCertificate">Registration Certificate</string>
    <string name="Chassis_Img">Chassis Image</string>
    <string name="ChassisNum">Chassis Number</string>
    <string name="Engine_number">Engine Number</string>
    <string name="Engine_Image">Engine Image</string>
    <string name="Vehical_class">Vehical Class</string>
    <string name="Model">Model</string>
    <string name="FitnessUpto">Fitness Upto</string>
    <string name="InsuranceUpto">Insurance Upto</string>
    <string name="FuelNorms">Fuel Norms</string>
    <string name="RoadTaxPaidUpto">Road Tax Paid Upto</string>
    <string name="FrontImage">Front Image</string>
    <string name="BackImage">BackImage</string>
    <string name="RegistrationDate">Registration Date</string>
    <string name="ClickImage">Click Image</string>
    <string name="selectDate">Select Date</string>
    <string name="FuelType">Fuel Type</string>
    <string name="no_load_found">No load found</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price</string>
    <string name="load_summary">Load Summary</string>
    <string name="load_list">Load List</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="truck_post">Post A Truck</string>

</resources>