<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentAddTruck">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/vehicle_no"
                android:textSize="16sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etVehiclePart1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Ex-PB"
                    android:inputType="textCapWords"
                    android:maxLength="2"

                    android:maxLines="1"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etVehiclePart2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Ex-03"
                    android:inputType="number"
                    android:maxLength="2"
                    android:maxLines="1"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/etVehiclePart3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Ex-V4999"
                    android:inputType="textCapWords"
                    android:maxLength="7"

                    android:maxLines="1"
                    android:textColor="@color/black" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/RegistrationNumber"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etRegistrationNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/RegistrationDate"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etRegistrationDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/RegistrationCertificate"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BtnRegistrationCert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/black" />
            <!--sdk-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ChassisNum"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etChassisNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Chassis_Img"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BtnChahiss_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/black" />

            <!---->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Engine_number"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etEngineNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Engine_Image"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BtnEngineImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/black" />
            <!--vehcl class-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Vehical_class"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etVehicalClass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/black" />

            <!--vsss-->
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbpetrol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:text="Petrol" />

                <RadioButton
                    android:id="@+id/rbdiesel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:checked="false"
                    android:text="Diesel" />

                <RadioButton
                    android:id="@+id/rbcng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="5dp"
                    android:checked="false"
                    android:text="CNG" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Model"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etModel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/FitnessUpto"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnFitnessupto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/InsuranceUpto"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnInsuranse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/FuelNorms"
                android:textSize="16sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etFuelNorms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/RoadTaxPaidUpto"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRoadTaxPaidUpto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/FrontImage"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BtnFrontImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/BackImage"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/BtnBackImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnSubmitf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:inputType="textCapWords"
                android:maxLength="50"
                android:maxLines="1"
                android:text="@string/submit"
                android:textColor="@color/white" />
        </LinearLayout>




    </ScrollView>

</RelativeLayout>